--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: TradingPlugin
-version: '0.9.3-SNAPSHOT'
+version: '1.0-RELEASE'
 main: net.justonedeveloper.plugins.trading.main.TradingMain
 api-version: 1.16
 prefix: JustOneDeveloper's Trading System
